Dodano routing, landing i products

--- a/myshop/angular.json
+++ b/myshop/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "myshop"
+    }
+  },
+  "defaultProject": "myshop",
+  "cli": {
+    "analytics": "2ef52797-d6d7-4e7e-b5da-b7f71af10a93"
+  }
 }
